tests/infinite_type/fail.stderr
error[E0432]: unresolved import `rand`
  --> $DIR/fail.rs:12:5
   |
12 | use rand::{thread_rng, Rng};
   |     ^^^^ use of undeclared crate or module `rand`

error[E0275]: overflow evaluating the requirement `mpstthree::struct_trait::send::Send<i32, Recv<i32, Recv<SumOp<i32>, mpstthree::struct_trait::end::End>>>: std::marker::Send`
  --> $DIR/fail.rs:26:23
   |
26 | fn nice_sum_server(s: NiceSumServer<i32>) -> Result<(), Box<dyn Error>> {
   |                       ^^^^^^^^^^^^^^^^^^
   |
  ::: $WORKSPACE/src/binary/struct_trait/recv.rs
   |
   |     T: marker::Send,
   |        ------------ required by this bound in `Recv`
   |
note: required because it appears within the type `SumOp<i32>`
  --> $DIR/fail.rs:18:6
   |
18 | enum SumOp<N: marker::Send + 'static> {
   |      ^^^^^

error[E0275]: overflow evaluating the requirement `mpstthree::struct_trait::send::Send<i32, Recv<i32, Recv<SumOp<i32>, mpstthree::struct_trait::end::End>>>: std::marker::Send`
  --> $DIR/fail.rs:30:29
   |
30 | fn nice_sum_server_accum(s: NiceSumServer<i32>, x: i32) -> Result<(), Box<dyn Error>> {
   |                             ^^^^^^^^^^^^^^^^^^
   |
  ::: $WORKSPACE/src/binary/struct_trait/recv.rs
   |
   |     T: marker::Send,
   |        ------------ required by this bound in `Recv`
   |
note: required because it appears within the type `SumOp<i32>`
  --> $DIR/fail.rs:18:6
   |
18 | enum SumOp<N: marker::Send + 'static> {
   |      ^^^^^

error[E0275]: overflow evaluating the requirement `Recv<SumOp<i32>, mpstthree::struct_trait::end::End>: Session`
  --> $DIR/fail.rs:50:1
   |
50 | / fn nice_sum_client_accum(s: NiceSumClient<i32>, mut xs: Vec<i32>) -> Result<i32, Box<dyn Error>> {
51 | |     match xs.pop() {
52 | |         Option::Some(x) if x % 2 == 0 => {
53 | |             let s = choose!(SumOp::More, s);
...  |
70 | |     }
71 | | }
   | |_^
   |
   = note: required because of the requirements on the impl of `Session` for `Recv<i32, Recv<SumOp<i32>, mpstthree::struct_trait::end::End>>`
   = note: required because it appears within the type `mpstthree::struct_trait::send::Send<i32, Recv<i32, Recv<SumOp<i32>, mpstthree::struct_trait::end::End>>>`
note: required because it appears within the type `SumOp<i32>`
  --> $DIR/fail.rs:18:6
   |
18 | enum SumOp<N: marker::Send + 'static> {
   |      ^^^^^
   = note: required because of the requirements on the impl of `Session` for `Recv<SumOp<i32>, mpstthree::struct_trait::end::End>`
